--- a/slides/cap_ir.tex
+++ b/slides/cap_ir.tex
@@ -1,60 +1,51 @@
 
+En este capítulo, exploraremos las primeras técnicas utilizadas para representar el lenguaje en forma vectorial. Para contextualizar esto, planteamos las siguientes preguntas:
+
 \begin{itemize}
-   \item ¿Cómo recupera un motor de búsqueda, como Duckduckgo o Google, los documentos relevantes a partir de una consulta dada?
-   \item ¿Cómo puede una empresa procesar las reclamaciones dejadas por sus usuarios en sus portales web?
+   \item ¿Cómo recuperan los motores de búsqueda, como Duckduckgo o Google, los documentos relevantes a partir de una consulta dada?
+   \item ¿Cómo pueden las empresas procesar las reclamaciones dejadas por sus usuarios en sus portales web?
 \end{itemize}
 
-Estos problemas se estudian en los siguientes campos:
+Estas preguntas suelen abordarse desde dos disciplinas relacionadas:
 
 \begin{itemize}
-   \item \emph{Recuperación de Información}: ciencia de buscar información en colecciones de documentos.
+   \item \emph{Recuperación de Información}: ciencia que se ocupa de buscar información en colecciones de documentos.
    \item \emph{Minería de Texto}: extracción automática de conocimiento a partir de texto.
 \end{itemize}
 
-¡Ambos están estrechamente relacionados con el Procesamiento del Lenguaje Natural (NLP, por sus siglas en inglés)! (las fronteras entre estos campos no están claras).
+Ambas disciplinas están estrechamente vinculadas al PLN, y las fronteras entre estos campos no siempre están claras.
 
 \section{Tokens y Tipos}
 
-Tokenización: la tarea de dividir una oración o documento en fragmentos llamados \emph{tokens}. \\
-Se pueden emplear transformaciones adicionales, como la eliminación de caracteres especiales (por ejemplo, puntuación), minúsculas, etc. ~\cite{manning2008}.
+El primer paso en el procesamiento de texto es, generalmente, la \textbf{tokenización}, que consiste en dividir una oración o documento en fragmentos llamados \emph{tokens}. A menudo, se acompañan otras transformaciones adicionales, como la eliminación de caracteres especiales (por ejemplo, puntuación), la conversión de todo el texto a minúsculas y otras operaciones descritas en este capítulo.
 
 \paragraph{Ejemplo}
-Entrada: Me gustan los lenguajes humanos y los lenguajes de programación.\\
+
+Entrada: ``Me gustan los lenguajes humanos y los lenguajes de programación.''
+
 Tokens: [Me] [gustan] [los] [lenguajes] [humanos] [y] [los] [lenguajes] [de] [programación]
 
+\subsection{Tipos}
 
-\paragraph{Tipos}
-\begin{itemize}
-\item Un \emph{tipo} es una clase de \emph{token} que contiene una única secuencia de caracteres.
-\item Se obtienen identificando los tokens únicos dentro del documento.
-\end{itemize}
+Un \emph{tipo} es una clase de \emph{token} que contiene una secuencia única de caracteres. Los tipos se obtienen identificando los tokens únicos dentro del documento.
 
-Tipos para la oración anterior: [Me] [gustan] [los] [lenguajes] [humanos] [y] [de] [programación] \
-El token \emph{lenguajes} se repitió en la oración.
+Por ejemplo, para la oración anterior, los tipos serían: [Me] [gustan] [los] [lenguajes] [humanos] [y] [de] [programación]. Observemos que el token \emph{lenguajes} se incluye solo una vez en la lista de tipos.
 
 \paragraph{Extracción de Vocabulario}
 
-\begin{itemize}
-\item Un \emph{término} es un \emph{tipo} normalizado.
-\item La normalización es el proceso de crear clases de equivalencia de diferentes \emph{tipos}. Esto quedará claro en las siguientes diapositivas.
-\item El vocabulario $V$ es el conjunto de términos (tokens únicos normalizados) dentro de una colección de documentos o corpus $D$.
-\end{itemize}
+Un \emph{término} es un \emph{tipo} normalizado. La normalización implica la creación de clases de equivalencia para diferentes \emph{tipos}, por ejemplo, cuando tratamos de manera indistinta dos tokens que difieren solo en el uso de mayúsculas (hombre y Hombre). El vocabulario $V$ es el conjunto de términos (tokens únicos normalizados) dentro de una colección de documentos o corpus $D$.
 
-\paragraph{Eliminación de stopwords}
-\begin{itemize}
-\item Con el fin de reducir el tamaño del vocabulario y eliminar términos que no aportan mucha información, se eliminan los términos que ocurren con alta frecuencia en el corpus.
-\item Estos términos se llaman \emph{stopwords} e incluyen artículos, pronombres, preposiciones y conjunciones. \
-Ejemplo: [un, una, y, cualquier, tiene, hacer, no, hizo, el, en].
-\end{itemize}
+\section{Eliminación de Stopwords}
 
-¡La eliminación de stopwords puede ser inconveniente en muchas tareas de procesamiento del lenguaje natural!
+Con el fin de reducir el tamaño del vocabulario y eliminar términos que no aportan mucha información, se eliminan los términos que ocurren con alta frecuencia en el corpus (o colección de documentos). Estos términos se llaman \emph{stopwords} e incluyen artículos, pronombres, preposiciones y conjunciones.
 
-Ejemplo: No me gusta la pizza $=>$ pizza (se eliminaron "no", "me" y "gusta")
+Ejemplo de stopwords: [un, una, y, cualquier, no, el, en].
 
-\paragraph{Stemming}
+Es importante tener en cuenta que la eliminación de stopwords puede ser inconveniente en muchas tareas de procesamiento del lenguaje natural. Por ejemplo, en la oración ``No me gusta la pizza'', al eliminar la negación, se pierde información valiosa sobre el sentimiento de la oración.
 
-Es un proceso de normalización de términos en el cual los términos se transforman a su raíz con el objetivo de reducir el tamaño del vocabulario. Se lleva a cabo aplicando reglas de reducción de palabras. \
-Ejemplo: Algoritmo de Porter.
+\section{Stemming}
+
+Es un proceso de normalización de términos en el cual los términos se transforman a su raíz con el objetivo de reducir el tamaño del vocabulario. Se lleva a cabo aplicando reglas de reducción de palabras. Ejemplo: Algoritmo de Porter.
 
 \begin{figure}[h!]
 \centering
@@ -79,27 +70,16 @@ t3 & program\\
 \end{table}
 
 
-\paragraph{Lematización}
+\section{Lematización}
+Otra estrategia de normalización de términos. También transforma las palabras en sus raíces.  Realiza un análisis morfológico utilizando diccionarios de referencia (tablas de búsqueda) para crear clases de equivalencia entre \emph{tipos}. Por ejemplo, para el token \emph{estudios}, una regla de stemming devolvería el término \emph{estudi}, mientras que a través de la lematización obtendríamos el término \emph{study}\footnote{\url{https://blog.bitext.com/what-is-the-difference-between-stemming-and-lemmatization/}}. 
 
-\begin{itemize}
-   \item Otra estrategia de normalización de términos.
-   \item También transforma las palabras en sus raíces.
-   \item Realiza un análisis morfológico utilizando diccionarios de referencia (tablas de búsqueda) para crear clases de equivalencia entre \emph{tipos}.
-   \item Por ejemplo, para el token \emph{estudios}, una regla de stemming devolvería el término \emph{estudi}, mientras que a través de la lematización obtendríamos el término \emph{study}\footnote{\url{https://blog.bitext.com/what-is-the-difference-between-stemming-and-lemmatization/}}.
-\end{itemize}
+\section{Ley de Zipf}
+La Ley de Zipf, propuesta por \emph{George Kingsley Zipf} en \cite{zipf1935}, es una ley empírica sobre la frecuencia de los términos dentro de una colección de documentos (\textbf{corpus}). Establece que la frecuencia $f$ de un término en un corpus es inversamente proporcional a su posición $r$ en una tabla de frecuencia ordenada:
 
-\subsection{Ley de Zipf}
-\begin{itemize}
-   \item La Ley de Zipf, propuesta por \emph{George Kingsley Zipf} en \cite{zipf1935}, es una ley empírica sobre la frecuencia de los términos dentro de una colección de documentos (\textbf{corpus}).
-   \item Establece que la frecuencia $f$ de un término en un corpus es inversamente proporcional a su posición $r$ en una tabla de frecuencia ordenada:
    \begin{equation}
       f = \frac{cf}{r^{\beta}}
    \end{equation}
-   \item Donde $cf$ es una constante dependiente de la colección y $\beta > 0$ es un factor de decaimiento.
-   \item Si $\beta = 1$, entonces $f$ sigue exactamente la Ley de Zipf; de lo contrario, sigue una distribución similar a la de Zipf.
-   \item La ley se relaciona con el principio del mínimo esfuerzo. A menudo utilizamos pocas palabras para expresar ideas.
-   \item La Ley de Zipf es un tipo de distribución de ley de potencia (distribuciones de cola larga).
-\end{itemize}
+Donde $cf$ es una constante dependiente de la colección y $\beta > 0$ es un factor de decaimiento. Si $\beta = 1$, entonces $f$ sigue exactamente la Ley de Zipf; de lo contrario, sigue una distribución similar a la de Zipf.  La ley nos dice que usamos muy frecuentemente unas pocas palabras. La Ley de Zipf es un tipo de distribución de ley de potencia (distribuciones de cola larga). 
 
 \begin{figure}[h!]
 	\centering
@@ -107,16 +87,15 @@ t3 & program\\
 	\caption{Ley de Zipf}
 \end{figure}
 
-\begin{itemize}
-   \item Si trazamos un gráfico de $log$-$log$, obtenemos una línea recta con una pendiente de $-\beta$.
-   \item Enumerar las palabras más frecuentes de un corpus se puede utilizar para construir una lista de \emph{stopwords}.
-\end{itemize}
-\subsection{Listas de publicaciones y el índice invertido}
+Si trazamos un gráfico de $log$-$log$, obtenemos una línea recta con una pendiente de $-\beta$. Enumerar las palabras más frecuentes de un corpus se puede utilizar para construir una lista de \emph{stopwords}.
+
+
+\section{Listas de posteo y el índice invertido}
 Sea $D$ una colección de documentos y $V$ el vocabulario de todos los términos extraídos de la colección:
 
 \begin{itemize}
-\item La lista de publicaciones de un término es la lista de todos los documentos donde el término aparece al menos una vez. Los documentos se identifican por sus identificadores.
-\item Un índice invertido es una estructura de datos tipo diccionario que mapea los términos $t_{i} \in V$ con sus listas de publicaciones correspondientes.
+\item La lista de posteo de un término es la lista de todos los documentos donde el término aparece al menos una vez. Los documentos se identifican por sus identificadores.
+\item Un índice invertido es una estructura de datos tipo diccionario que mapea los términos $t_{i} \in V$ con sus listas de posteo correspondientes.
 \begin{displaymath}
 <\text{término}> \rightarrow <\text{idDocumento}>^*
 \end{displaymath}
@@ -128,12 +107,12 @@ Sea $D$ una colección de documentos y $V$ el vocabulario de todos los términos
 \caption{Índice invertido}
 \end{figure}
 
-\subsection{Motores de búsqueda web}
+\section{Motores de búsqueda web}
 
 Un motor de búsqueda es un sistema de recuperación de información diseñado para buscar información en la web (satisfacer necesidades de información) \cite{manning2008}. Sus componentes básicos son:
 
 \begin{itemize}
-\item Rastreador: un robot que navega por la web según una estrategia definida. Por lo general, comienza navegando por un conjunto de sitios web iniciales y continúa navegando a través de sus enlaces.
+\item Crawler: un robot que navega por la web según una estrategia definida. Por lo general, comienza navegando por un conjunto de sitios web iniciales y continúa navegando a través de sus enlaces.
 \item Indexador: se encarga de mantener un índice invertido con el contenido de las páginas recorridas por el rastreador.
 \item Procesador de consultas: se encarga de procesar las consultas de los usuarios y buscar en el índice los documentos más relevantes para una consulta.
 \item Función de clasificación: la función utilizada por el procesador de consultas para clasificar los documentos indexados en la colección por relevancia según una consulta.
@@ -145,82 +124,70 @@ Un motor de búsqueda es un sistema de recuperación de información diseñado p
 \includegraphics[scale=0.25]{pics/searchengine.png}
 \caption{Los diversos componentes de un motor de búsqueda web \cite{manning2008}.}
 \end{figure}
-\section{El modelo de espacio vectorial}
 
-\begin{itemize}
-\item Para clasificar consultas o medir la similitud entre dos documentos, necesitamos una métrica de similitud.
-\item Los documentos pueden ser \textit{representados} como vectores de términos, donde cada término es una dimensión del vector \cite{salton1975vector}.
-\item Documentos con diferentes palabras y longitudes residirán en el mismo espacio vectorial.
-\item Este tipo de representaciones se llaman \emph{Bolsa de Palabras} (Bag of Words).
-\item En las representaciones de bolsa de palabras, se pierde el orden de las palabras y la estructura lingüística de una oración.
-\item El valor de cada dimensión es un peso que representa la relevancia del término $t_{i}$ en el documento $d$.
+
+\section{El modelo de espacio vectorial}
+Para clasificar consultas o medir la similitud entre dos documentos, necesitamos una métrica de similitud. Los documentos pueden ser \textit{representados} como vectores de términos, donde cada término es una dimensión del vector \cite{salton1975vector}. Documentos con diferentes palabras y longitudes residirán en el mismo espacio vectorial. Este tipo de representaciones se llaman \emph{Bolsa de Palabras} (Bag of Words). En las representaciones de bolsa de palabras, se pierde el orden de las palabras y la estructura lingüística de una oración.
+
+El valor de cada dimensión es un peso que representa la relevancia del término $t_{i}$ en el documento $d$.
 \begin{equation}
 d_{j} \rightarrow \overrightarrow{d_{j}}=(w(t_{1},d_{j}),...,w(t_{|V|},d_{j}))
 \end{equation}
-\item ¿Cómo podemos modelar la información que aporta un término a un documento?
-\end{itemize}
 
-\paragraph{Frecuencia de Término - Frecuencia Inversa de Documento}
+¿Cómo podemos modelar la información que aporta un término a un documento? Necesitamos formas de ponderar eso.
 
-\begin{itemize}
-\item Sea $tf_{i,j}$ la frecuencia del término $t_{i}$ en el documento $d_{j}$.
-\item Un término que ocurre 10 veces debería proporcionar más información que uno que ocurre solo una vez.
-\item ¿Qué ocurre cuando tenemos documentos que son mucho más largos que otros?
-\item Podemos normalizar dividiendo por la frecuencia máxima del término en el documento.
+\subsection{Frecuencia de Término - Frecuencia Inversa de Documento}
+Sea $tf_{i,j}$ la frecuencia del término $t_{i}$ en el documento $d_{j}$.  Un término que ocurre 10 veces debería proporcionar más información que uno que ocurre solo una vez. ¿Qué ocurre cuando tenemos documentos que son mucho más largos que otros? Podemos normalizar dividiendo por la frecuencia máxima del término en el documento.
 \begin{displaymath}
 ntf_{i,j}=\frac{tf_{i,j}}{\max_i (tf_{i,j})}
 \end{displaymath}
-\item ¿Un término que ocurre en muy pocos documentos proporciona más o menos información que uno que ocurre varias veces?
-\item Por ejemplo, el documento \emph{El respetado alcalde de Pelotillehue}. El término \emph{Pelotillehue} ocurre en menos documentos que el término \emph{alcalde}, por lo que debería ser más descriptivo.
-\item Sea $N$ el número de documentos en la colección y $n_{i}$ el número de documentos que contienen el término $t_{i}$, definimos la frecuencia inversa de documento ($idf$) de $t_{i}$ de la siguiente manera:
+
+Ahora nos preguntas, ¿un término que ocurre en muy pocos documentos proporciona más o menos información que uno que ocurre varias veces? Por ejemplo, el documento \emph{El respetado alcalde de Pelotillehue}. El término \emph{Pelotillehue} ocurre en menos documentos que el término \emph{alcalde}, por lo que debería ser más descriptivo.
+
+Sea $N$ el número de documentos en la colección y $n_{i}$ el número de documentos que contienen el término $t_{i}$, definimos la frecuencia inversa de documento ($idf$) de $t_{i}$ de la siguiente manera:
 \begin{displaymath}
 idf_{t_{i}}= \log_{10}\left(\frac{N}{n_{i}}\right)
 \end{displaymath}
-\item Un término que aparece en todos los documentos tendría $idf=0$, y uno que aparece en el $10\%$ de los documentos tendría $idf=1$.
-\item El modelo de puntuación $tf$-$idf$ combina las puntuaciones de $tf$ e $idf$, y resulta en los siguientes pesos $w$ para un término en un documento:
+
+Un término que aparece en todos los documentos tendría $idf=0$, y uno que aparece en el $10\%$ de los documentos tendría $idf=1$. El modelo de puntuación $tf$-$idf$ combina las puntuaciones de $tf$ e $idf$, y resulta en los siguientes pesos $w$ para un término en un documento:
 \begin{displaymath}
 w(t_{i},d_{j})=tf_{i}\times \log_{10}\left(\frac{N}{n_{i}}\right)
 \end{displaymath}
-\item Las consultas de los motores de búsqueda también pueden ser modeladas como vectores. Sin embargo, en promedio, las consultas suelen tener entre 2 y 3 términos. Para evitar tener demasiadas dimensiones nulas, los vectores de consulta pueden suavizarse de la siguiente manera:
+
+Las consultas de los motores de búsqueda también pueden ser modeladas como vectores. Sin embargo, en promedio, las consultas suelen tener entre 2 y 3 términos. Para evitar tener demasiadas dimensiones nulas, los vectores de consulta pueden suavizarse de la siguiente manera:
 \begin{displaymath}
 w(t_{i},d_{j})=(0.5+0.5\times tf_{i,j})\log_{10}\left(\frac{N}{n_{i}}\right)
 \end{displaymath}
-\end{itemize}
 
 \subsection{Similitud entre vectores}
-\begin{itemize}
-\item Representar consultas y documentos como vectores permite calcular su similitud.
-\item Un enfoque podría ser utilizar la distancia euclidiana.
-\item El enfoque común es calcular el coseno del ángulo entre los dos vectores.
-\item Si ambos documentos son iguales, el ángulo sería $0$ y su coseno sería $1$. Por otro lado, si son ortogonales, el coseno es $0$.
-\item La similitud del coseno se calcula de la siguiente manera:
+Representar consultas y documentos como vectores permite calcular su similitud. Un enfoque podría ser utilizar la distancia euclidiana. El enfoque común es calcular el coseno del ángulo entre los dos vectores. Si ambos documentos son iguales, el ángulo sería $0$ y su coseno sería $1$. Por otro lado, si son ortogonales, el coseno es $0$. La similitud del coseno se calcula de la siguiente manera:
 \begin{displaymath}
 \text{similitud del coseno}(\vec{d}{1},\vec{d}{2})= \frac{\vec{d}{1}\cdot \vec{d}{2}}{|\vec{d}{1}|\times|\vec{d}{2}|} = \frac{\sum_{i=1}^{|V|}(w(t_{i},d_{1})\times w(t_{i},d_{2}))}{\sqrt{\sum_{i=1}^{|V|} w(t_{i},d_{1})^2}\times \sqrt{\sum_{i=1}^{|V|} w(t_{i},d_{2})^2}}
 \end{displaymath}
-\item Esto se llama incorrectamente "distancia del coseno". En realidad, es una métrica de similitud.
-\item Observa que la similitud del coseno normaliza los vectores por su norma euclidiana $||\vec{d}||_{2}$.
 
-\end{itemize}
+Esto se llama incorrectamente ``distancia del coseno''. En realidad, es una métrica de similitud pues entre más cerca dos vectores mayor es el valor asociado. Nótese que la similitud del coseno normaliza los vectores por su norma euclidiana $||\vec{d}||_{2}$.
 
 \begin{figure}[h!]
 \centering
 \includegraphics[scale=0.5]{pics/cos.png}
 \caption{Similitud del coseno.}
 \end{figure}
+
 \paragraph{Ejercicio}
 \begin{itemize}
 \item Supongamos que tenemos $3$ documentos formados a partir de las siguientes secuencias de términos: \
 $d_{1}\rightarrow t_{4}t_{3}t_{1}t_{4}$ \
 $d_{2}\rightarrow t_{5}t_{4}t_{2}t_{3}t_{5}$ \
 $d_{3}\rightarrow t_{2}t_{1}t_{4}t_{4}$ \
-\item Construye una matriz término-documento de dimensiones $5\times3$ utilizando pesos simples de $tf$-$idf$ (sin normalización).
+\item Construya una matriz término-documento de dimensiones $5\times3$ utilizando pesos simples de $tf$-$idf$ (sin normalización).
 \item Recomendamos que primero construyas una lista con el número de documentos en los que aparece cada término (útil para calcular los valores de $idf$).
 \item Luego, calcula los valores de $idf$ para cada término.
 \item Rellena las celdas de la matriz con los valores de $tf$-$idf$.
 \item ¿Cuál es el documento más cercano a $d_{1}$?
 \end{itemize}
 
- \begin{table}[htbp]
+Resultado:
+ \begin{table}[h]
  \centering
 \begin{tabular}{|l|r|r|r|}
 \hline
@@ -233,47 +200,53 @@ t5 & 0.000 & 0.954 & 0.000 \\ \hline
 \end{tabular}
 \caption{Matriz tf-idf}
 \end{table}
+\section{Clustering de Documentos}
 
-\section{Agrupamiento de Documentos}
+¿Cómo podemos agrupar (o clusterizar) documentos que sean similares entre sí? El clustering es el proceso de agrupar documentos que comparten similitudes. Cada grupo de documentos se denomina \emph{cluster}. En el clustering, buscamos identificar grupos de documentos donde la similitud entre los documentos del mismo grupo se maximice, mientras que la similitud entre los documentos de diferentes grupos se minimice.
 
-\begin{itemize}
-\item ¿Cómo podemos agrupar documentos que son similares entre sí?
-\item El agrupamiento es el proceso de agrupar documentos que son similares entre sí.
-\item Cada grupo de documentos se llama \emph{cluster} o grupo.
-\item En el agrupamiento, intentamos identificar grupos de documentos en los que la similitud entre documentos en el mismo grupo se maximiza y la similitud de documentos en diferentes grupos se minimiza.
 \begin{figure}[h!]
 \centering
 \includegraphics[scale=0.6]{pics/cluster.png}
-\caption{ Conjunto de documentos donde los grupos se pueden identificar claramente.}
+\caption{Conjunto de documentos donde los grupos se pueden identificar claramente.}
 \end{figure}
-\item El agrupamiento de documentos permite identificar temas en un corpus y reducir el espacio de búsqueda en un motor de búsqueda, es decir, el índice invertido se organiza según los grupos.
-\item K-means es un algoritmo de agrupamiento simple que recibe el número de grupos $k$ como parámetro.
-\item El algoritmo se basa en la idea de \emph{centroide}, que es el vector promedio de los documentos que pertenecen al mismo grupo.
-\item Sea $S$ un conjunto de vectores bidimensionales ${3,6}, {1,2}, {5,1}$, el centroide de $S$ es ${(3+1+5)/3,(6+2+1)/3} = {3,3}$.
 
-\end{itemize}
+El clustering de documentos permite identificar tópicos en un corpus y reducir el espacio de búsqueda en un motor de búsqueda. Por ejemplo, el índice invertido se organiza según los grupos. El algoritmo K-means es una técnica de clustering simple que toma como parámetro el número de grupos, $k$.
 
-\subsection{K-Means}
-\begin{enumerate}
-\item Comenzamos con $k$ centroides aleatorios.
-\item Calculamos la similitud entre cada documento y cada centroide.
-\item Asignamos cada documento a su centroide más cercano formando un grupo.
-\item Se recalculan los centroides de acuerdo a los documentos asignados a ellos.
-\item Este proceso se repite hasta la convergencia.
-\end{enumerate}
+El algoritmo se basa en la noción de \emph{centroides}, que son los vectores promedio de los documentos pertenecientes al mismo grupo. Por ejemplo, dado un conjunto de vectores bidimensionales $S = \{(3,6), (1,2), (5,1)\}$, el centroide de $S$ sería $(3,3)$, calculado como $(3+1+5)/3$ y $(6+2+1)/3$.
 
-\begin{figure}[h!]
-\centering
-\includegraphics[scale=0.6]{pics/kmeans.png}
-\caption{ Algoritmo K-means}
-\end{figure}
+El algoritmo K-means comienza seleccionando $k$ centroides de manera aleatoria. Luego, calcula la similitud entre cada documento y cada centroide, asignando cada documento al centroide más cercano, formando así un grupo. Los centroides se recalculan de acuerdo con los documentos asignados a ellos. Este proceso se repite hasta que se cumple un criterio de convergencia, como se ilustra en el Algoritmo~\ref{algo:kmeans}.
+
+\begin{algorithm}[H]
+\SetKwInOut{Input}{Input}
+\SetKwInOut{Output}{Output}
+    \Input{Datos vectoriales $\vec{x}_1, \ldots, \vec{x}_N$ y el número de clusters $K$}
+    \Output{centroides de clusters $\vec{\mu}_1, \ldots, \vec{\mu}_K$}
+    $(\vec{s}_1, \vec{s}_2, \ldots, \vec{s}_K) \leftarrow$ SELECT\_RANDOM\_SEEDS($\vec{x}_1, \ldots, \vec{x}_N$, $K$)\;
+    \For{$k \leftarrow 1$ \KwTo $K$}{
+        $\vec{\mu}_k \leftarrow \vec{s}_k$\;
+    }
+    \While{no se cumpla el criterio de parada}{
+        \For{$k \leftarrow 1$ \KwTo $K$}{
+            $\omega_k \leftarrow \{\}$\;
+        }
+        \For{$n \leftarrow 1$ \KwTo $N$}{
+            $j \leftarrow \arg\min_{j'} \|\vec{\mu}_{j'} - \vec{x}_n\|$\;
+            $\omega_j \leftarrow \omega_j \cup \{\vec{x}_n\}$\;
+        }
+        \For{$k \leftarrow 1$ \KwTo $K$}{
+            $\vec{\mu}_k \leftarrow \frac{1}{{|\omega_k|}} \sum_{\vec{x} \in \omega_k} x$\;
+        }
+    }
+    \Return{$\{\vec{\mu}_1, \ldots, \vec{\mu}_K\}$}\;
+    \caption{K-Means}\label{algo:kmeans}
+\end{algorithm}
 
 \section{Conclusiones y Conceptos Adicionales}
-\begin{itemize}
-\item Representar documentos como vectores es fundamental para calcular similitudes entre pares de documentos.
-\item Los vectores de "bag of words" carecen de estructura lingüística.
-\item Los vectores de "bag of words" son de alta dimensionalidad y dispersos.
-\item Los n-gramas de palabras pueden ayudar a capturar expresiones de múltiples palabras (por ejemplo, New York $=>$ new\_york)
-\item Los sistemas modernos de recuperación de información van más allá de la similitud de vectores (PageRank, Retroalimentación de relevancia, Minería de registros de consultas, Grafo de conocimiento de Google, Aprendizaje automático).
-\item La recuperación de información y la minería de textos se preocupan menos por la estructura lingüística y más por producir algoritmos rápidos y escalables \cite{jacobbook}.
-\end{itemize}
+
+En este capítulo, hemos explorado la representación de documentos como vectores para calcular similitudes entre ellos. Los vectores de ``bolsa-de-palabras'' son una forma común de representar documentos, pero tienen limitaciones ya que carecen de estructura lingüística y pueden ser de alta dimensionalidad y dispersos.
+
+Una alternativa para capturar expresiones de múltiples palabras es utilizar n-gramas de palabras, que son secuencias contiguas de $n$ palabras. Por ejemplo, representar ``New York'' como ``new\_york'' nos permite capturar la relación entre esas dos palabras en lugar de tratarlas como entidades separadas.
+
+Es importante señalar que los sistemas modernos de recuperación de información van más allá de la similitud de vectores. Utilizan algoritmos como PageRank \cite{page1998pagerank} para determinar la relevancia de un sitio web basándose en los enlaces que lo apuntan. También emplean técnicas de aprendizaje automático que utilizan registros de consultas anteriores para mejorar el ranking de resultados. Además, el uso de grafos de conocimiento enriquece aún más los resultados al proporcionar información estructurada y relaciones entre entidades.
+
+Es importante destacar que disciplinas como la recuperación de información y la minería de textos se centran menos en la estructura lingüística que PLN y más en producir algoritmos rápidos y escalables para procesar grandes volúmenes de texto.
